<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
>


    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_no_internet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/grey_900"
        android:textSize="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/guideline16"
        app:layout_constraintStart_toEndOf="@+id/guideline15"
        app:layout_constraintTop_toBottomOf="@+id/imageView15"
        android:text="@string/title_no_network_connection" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center_horizontal"
        android:text="@string/msg_no_internet_connection"
        android:textColor="@color/grey_900"
        android:textSize="@dimen/_13sdp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/guideline16"
        app:layout_constraintStart_toEndOf="@+id/guideline15"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRefresh"
        android:layout_width="@dimen/_190sdp"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/_5sdp"
        android:text="@string/title_button_refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guideline16"
        app:layout_constraintStart_toEndOf="@+id/guideline15"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_20sdp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_20sdp" />

</androidx.constraintlayout.widget.ConstraintLayout>